@@ -1,3 +1,9 @@
+Wed Jun 16 12:48:11 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
+
+        * DnC/RepositoryManager/Repository_Manager.cpp:
+
+          Made changes to use ACE_Hash_Map instead of std::map.
+
 Wed Jun 16 12:02:12 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
 
         * DnC/RepositoryManager/Repository_Manager.cpp:
